RESOLVED FIXED269530
AX: AccessibilitySVGElement::description() is missing several null-checks, causing crashes
https://bugs.webkit.org/show_bug.cgi?id=269530
Summary AX: AccessibilitySVGElement::description() is missing several null-checks, ca...
Tyler Wilcock
Reported 2024-02-15 17:24:25 PST
...
Attachments
Patch (2.58 KB, patch)
2024-02-15 17:28 PST, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2024-02-15 17:24:34 PST
Tyler Wilcock
Comment 2 2024-02-15 17:27:27 PST
Tyler Wilcock
Comment 3 2024-02-15 17:28:55 PST
EWS
Comment 4 2024-02-17 16:36:35 PST
Committed 274934@main (6d542b7a2a83): <https://commits.webkit.org/274934@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469906 [details].
Note You need to log in before you can comment on or make changes to this bug.