AX: AccessibilitySVGElement::description() is missing several null-checks, causing crashes https://bugs.webkit.org/show_bug.cgi?id=269530 rdar://123016231

Reviewed by Chris Fleizach.

* Source/WebCore/accessibility/AccessibilitySVGElement.cpp:
(WebCore::AccessibilitySVGElement::description const):

Canonical link: https://commits.webkit.org/274934@main